<resources>
    <string name="app_name">Tap&amp;Swap</string>
    <string name="mock_item_title">Krótki tytuł przedmiotu do oddania</string>
    <string name="mock_item_description">Bardziej szczegółowy opis przedmiotu do oddania. Elementy zachęcające innych użytkowników do wzięcia przedmiotu. Dobry opis, to klucz do sukcesu udanej wymiany.</string>
    <string name="reject">Odrzuć</string>
    <string name="want">Chcę</string>
    <string name="add_item">Dodaj przedmiot</string>
    <string name="edit">Edytuj</string>
    <string name="remove">Usuń</string>
    <string name="show_popup_menu">Wyświetl menu podręczne</string>
    <string name="add_new_item">Dodaj nowy przedmiot</string>
    <string name="item_name">Nazwa przedmiotu</string>
    <string name="item_description">Opis przedmiotu</string>
    <string name="item_image">Zdjęcie przedmiotu</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="preview">Podgląd</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque fringilla nisi orci, lacinia pulvinar nisl cursus a. Donec sed pharetra leo, a pretium tellus. Praesent convallis ac ipsum vel luctus. Integer orci lorem, tempus sed interdum non, placerat ut lacus. Cras sit amet mauris id magna pharetra pretium a nec velit. Fusce leo libero, porttitor et felis sit amet, rutrum vulputate velit. In aliquet egestas nibh, id pharetra neque egestas at. Nullam sed congue libero. Maecenas nisl velit, varius ac porta non, cursus ac purus. Nunc tristique, dolor pharetra malesuada lobortis, justo mauris blandit erat, efficitur imperdiet eros turpis a massa. Praesent non enim augue. Phasellus eget aliquet neque, at condimentum magna.</string>
    <string name="close_preview">Zamknij podgląd</string>
    <string name="you_swap">Oddajesz</string>
    <string name="they_swap">Dostaniesz</string>
    <string name="confirm">Potwierdź</string>
    <string name="cancel">Anuluj</string>
    <string name="swap_info">Informacje dot. wymiany</string>
    <string name="swap_person1_data">Komu oddajesz:</string>
    <string name="mock_person_name">Jakiś Random</string>
    <string name="mock_person_phone_number">666666666</string>
    <string name="mock_person_email">jakis.random@gmail.com</string>
    <string name="email">Adres email:</string>
    <string name="phone_number">Numer telefonu:</string>
    <string name="price_point">Kategoria cenowa:</string>
    <string name="mock_price_point">Miliony</string>
    <string name="details">Szczegóły</string>
    <string name="swap_person2_data">Od kogo dostajesz:</string>










</resources>
