<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.DiscoverActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

        <ImageSwitcher
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

        </ImageSwitcher>

        <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/mock_item_title"
                android:textColor="@color/colorTitle"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/mock_item_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_title" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="6dp">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="4dip"
                    android:background="?android:attr/dividerVertical" />

            <View
                    android:id="@+id/ViewColorPickerHelper"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dip"
                    android:layout_marginBottom="4dip"
                    android:background="?android:attr/dividerVertical" />

            <Button
                    android:id="@+id/BtnColorPickerCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@id/ViewColorPickerHelper"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/reject" />

            <Button
                    android:id="@+id/BtnColorPickerOk"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@id/ViewColorPickerHelper"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/want" />
        </RelativeLayout>

        <mwo.lab.tapswap.views.LoadingView
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FAFAFA"
                android:visibility="visible"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="5dp" />

    </android.support.constraint.ConstraintLayout>

    <View
            android:id="@+id/overscroll_left"
            android:layout_width="@dimen/padding_medium"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/overscroll_left"
            android:visibility="gone" />

    <View
            android:id="@+id/overscroll_right"
            android:layout_width="@dimen/padding_medium"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@drawable/overscroll_right"
            android:visibility="gone" />

</FrameLayout>